# ChangeLog for games-fps/xonotic
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Jul 2011; Nikoli <nikoli@lavabit.com> xonotic-9999.ebuild:
  migrate to git-2

  12 Apr 2011; Nikoli <nikoli@lavabit.com> xonotic-0.1.0_pre.ebuild,
  xonotic-9999.ebuild:
  migrate to virtual/jpeg

  29 Jan 2011; Nikoli <nikoli@lavabit.com> xonotic-9999.ebuild:
  install public key for d0_blind_id, thanks ZyX-I

  17 Jan 2011; Nikoli <nikoli@lavabit.com> xonotic-0.1.0_pre.ebuild,
  xonotic-9999.ebuild, metadata.xml:
  move *.pk3 to xonotic-data package, cosmetics

  01 Jan 2011; Nikoli <nikoli@lavabit.com> xonotic-9999.ebuild:
  fix live ebuild

*xonotic-0.1.0_pre (30 Dec 2010)

  30 Dec 2010; Nikoli <nikoli@lavabit.com> +xonotic-0.1.0_pre.ebuild:
  version bump

*xonotic-9999 (18 Jun 2010)

  18 Jun 2010; Nikoli <nikoli@lavabit.com> +xonotic-9999.ebuild,
  +metadata.xml:
  xonotic initial ebuild
