@@ -1,5 +1,7 @@
 DIST xonotic-0.1.0preview.zip 1386789859 RMD160 abcf512141e9aab970ff0a91c0c0d02ac8a3b4b9 SHA1 debda2b012e6cf423fe61435f02226746fdaf9fb SHA256 7f86a9e87d050cc490fb15e3e27142a8c2522ad84907d78dadc294bf7a687b0d
+DIST xonotic-0.5.0.zip 988512100 RMD160 92a56d33c11d78884639fd0d5095589ff86b8fe0 SHA1 716135609ef953f2fbed97bd6a3cf116b7afd7a9 SHA256 58e7226a8b534858f8161c378071f4dab168e2c683f1f986e6e65be75a5b730f
 EBUILD xonotic-0.1.0_pre.ebuild 3190 RMD160 1fe7e1afcdb07d8e1d195177016fec888f9983f1 SHA1 a34e528c014d4bf267f7925da96dd03527f3ace4 SHA256 5877c297bab69f5cef570915fdac12b57213e95136b8bd16b9fc277a0f850f92
-EBUILD xonotic-9999.ebuild 3244 RMD160 a345a96fa9a35197917a2fcbd4dad41e378b1691 SHA1 72a1c8bc0b61453a10ad2c891e4c1194ed478fdd SHA256 64b02f46d97cc1e7f21eb2401ad9e97f2067b3a428fb00a326d427b3e82fcfab
-MISC ChangeLog 932 RMD160 77d51b8e2e60d1e73075d693d7e7b8618d0b6381 SHA1 4dfe32ece1bdc5752c5ef906804236d2c1c8221b SHA256 3056902620b83cc22607a92541071776f7953da0ec65af2570058703bc229818
-MISC metadata.xml 246 RMD160 fe65f53ca2aa31f6d8c4fc4ee289e6c67b53441f SHA1 15de876352ad307fca2fd3468eab43bf327ac848 SHA256 9ff4ee44fd0e30e11a2fc610b39ff825cc265c0ee045c18c1a5873e7b579f6e6
+EBUILD xonotic-0.5.0.ebuild 3139 RMD160 745b95478418b38d2725cd9329397fc87e999ba7 SHA1 c7044d76d7373344835f35effed7cb0915118098 SHA256 612b66ba4c18a1dce89ae483e82f4ec8699f687dc251d9ba074a1d4a385a29a6
+EBUILD xonotic-9999.ebuild 3251 RMD160 54796706deb4d658c53f976dbb40db242e29db47 SHA1 13eb464f145fb138213101472af5bd67ae5e3562 SHA256 562dbdaac2a9e2330dae33d9c6e1a04f43d6f3ce6ca0e743076530be0459f073
+MISC ChangeLog 1095 RMD160 f86f7b10ab7e4f8c02bc0c132fce57a10a72c31d SHA1 9d052d22374ea3beb69bd067eb7cb791290c43e6 SHA256 b989083605a066e55fe32c6eb16a18a8183dfa8160428b11080598c90be49149
+MISC metadata.xml 393 RMD160 c8032514d0e8873720ac170dbbf08fb901c923aa SHA1 edfd5f69eb3af9c523327f07459c6c47aad3f332 SHA256 c90c2b8b95fb2c5b504ff71614f6e55eabb963fcc4a3e8e8ae94fc477cab4d3e
