@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*xonotic-0.5.0 (08 Sep 2011)
+
+  08 Sep 2011; Nikoli <nikoli@lavabit.com> +xonotic-0.5.0.ebuild,
+  xonotic-9999.ebuild, metadata.xml:
+  version bump, add s3tc USE
+
   05 Jul 2011; Nikoli <nikoli@lavabit.com> xonotic-9999.ebuild:
   migrate to git-2
 
